refactor: Use forEachChild filter in ProcessingInstanceBatchTerminate
(cherry picked from commit 71dd66791f49b51fcb98150d8b726095ad290634)